--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹 호스팅</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="global.css" />
+  <title>Jimyeung Seo | Home</title>
 </head>
+
 <body>
-    git pages 입니다.
+  git pages 입니다.
 </body>
+
 </html>
-출처: https://devyihyun.tistory.com/203 [이롭게 현명하게:티스토리]
