Setting: React+tailwindcss

--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!-- index.html -->
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="global.css" />
-  <title>Jimyeung Seo | Home</title>
-</head>
-
-<body>
-  git pages 입니다.
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><title>Jimyeung Seo | Home</title><script defer="defer" src="/static/js/main.be5514f9.js"></script><link href="/static/css/main.4de93d0d.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
